# swear-bot

./: Cargo.toml
src/: database.db  main.rs  messages.rs  singlish.in
